# near-rust-contract-standard

./: readme.md
sample_contract/: Cargo.toml  readme.md  unit_testing_guidelines.md
sample_contract/src/: errors.rs  events.rs  ext_interface.rs  internal_structs.md  lib.rs  personalized_struct.rs  readme.md  utils.rs
sample_contract/src/actions/: callback_actions.rs  guardian_actions.rs  mod.rs  owner_actions.rs  user_actions.rs
sample_contract/src/complex_personalized_struct/: internal_data_structure.rs  mod.rs
